autocomplete: fix z-index, set width to auto

--- a/src/main/webapp/resources/css/suggest.css
+++ b/src/main/webapp/resources/css/suggest.css
@@ -1,13 +1,11 @@
 .yui3-aclist{
-    position:absolute;
-    z-index:1
+    z-index:2;
 }
 .yui3-aclist-hidden{
     visibility:hidden
 }
 .yui3-aclist-aria{
-    left:-9999px;
-    position:absolute
+    display:none
 }
 .yui3-aclist-content{
     background-color:white
@@ -15,7 +13,6 @@
 .yui3-aclist-list{
     list-style:none;
     margin:0;
-    overflow:hidden;
     padding:0;
     border:1px solid #ccc;
     border-bottom:none
@@ -26,7 +23,8 @@
     list-style:none;
     padding:2px 5px;
     border-bottom:1px solid #ccc;
-    margin-left:0
+    margin-left:0;
+    white-space:nowrap
 }
 .yui3-aclist-item-active{
     background-color:#426FD9;
